--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta  charset="UTF-8">
+    <meta  http-equiv="X-UA-Compatible"  content="IE=edge">
+    <meta  name="viewport"  content="width=device-width, initial-scale=1.0">
+    <title>XOXMuK</title>
+    <link  rel="icon"  type="image/x-icon"  href="pack.ico">
+
+    <style>
+        body {
+            color: white;
+            background-color: #16181c;
+        }
+
+        .m {
+            color: white;
+            background-color: #16181c;
+        }
+    </style>
+
+    <meta  name="keywords"  content="yushi4ka">
+    <meta  name="author"  content="yushi4ka">
+</head>
+
+<body  class="b">
+
+    <main  class="m">
+        <div  class="m-container">
+            <div  class="m-container-profile">
+                <div  class="m-container-profile-name">
+                    <h1  id="cursor-default">XOXMuK</h1>
+                </div>
+                <div  class="m-container-profile-description">
+<p>Sleep <3</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+</body>
+
+</html>
