--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XOXMuK</title>
-    <link rel="icon" type="image/x-icon" href="XOXMuK.png">
+    <link rel="icon" type="image/x-icon" href="ico.png">
 
     <style>
         :root {
