--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="m-container">
                 <div class="m-container-profile">
                     <div class="m-container-profile-avatar">
-                        <img src="XOXMuK.png" alt="XOXMuK avatar">
+                        <img src="ico.png" alt="XOXMuK avatar">
                     </div>
                     <div class="m-container-profile-name">
                         <h1>XOXMuK</h1>
