--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <meta  name="author"  content="XOXMuK">
   </head>
   <body>
-    <div  id="root"></div>
+    <div  id="root">Hello World!</div>
   </body>
 </html>
